infrastructure/k8s/prod/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment

spec:
  replicas: 3
  selector:
    matchLabels:
      app: hangeul-chat-frontend
  
  template:
    metadata:
      labels: 
        app: hangeul-chat-frontend
    spec:
      imagePullSecrets:
        - name: ecr-registry
      containers:
        - name: hangeul-chat-frontend
          image: 942883569368.dkr.ecr.ap-northeast-2.amazonaws.com/hangeul-chat-frontend:f1826082be747af1413301993fbc75b4af3e5520
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
